--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portfolio</title>
+    <title>Vignesh Murugan</title>
+    <link rel="icon" href="./assets/favicon.ico" />
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <!-- Bootstrap Icons -->
@@ -18,8 +19,8 @@
     <nav class="navbar bg-body-secondary container-fluid">
         <!-- Logo -->
         <div class="d-flex align-items-bottom align-items-md-top">
-            <img src="./assets/logo1.jpg" alt="logo" width="50" height="50">
-            <a class="navbar-brand text-danger fw-bolder fs-2" href="#">
+            <img src="./assets/logo.jpg" alt="logo" width="50" height="50">
+            <a class="navbar-brand text-danger fw-bolder fs-3" href="#">
                 <p>VIGNESH MURUGAN</p>
             </a>
         </div>
