--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
             <div class="row py-5">
 
                 <!-- Card 1 start -->
-                <div class="col-md-6 col-lg-4">
+                <div class="col-md-6 col-lg-4 my-4">
                     <div class="section-item bg-light p-4 shadow-lg">
                         <!-- icon -->
                         <div class="icon text-danger text-center fs-1">
@@ -209,7 +209,7 @@
                 <!-- Card 1 end -->
 
                 <!-- Card 2 start -->
-                <div class="col-md-6 col-lg-4">
+                <div class="col-md-6 col-lg-4 my-4">
                     <div class="section-item bg-light p-4 shadow-lg">
                         <!-- icon -->
                         <div class="icon text-danger text-center fs-1">
@@ -229,7 +229,7 @@
                 <!-- Card 2 end -->
 
                 <!-- Card 3 start -->
-                <div class="col-md-6 col-lg-4">
+                <div class="col-md-6 col-lg-4 my-4">
                     <div class="section-item bg-light p-4 shadow-lg">
                         <!-- icon -->
                         <div class="icon text-danger text-center fs-1">
