--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
             </div>
 
             <!-- Section Body -->
-            <div class="row py-2">
+            <div class="row pt-5 pb-2">
 
                 <!-- Card 1 start -->
                 <div class="col-md-6 col-lg-4 my-4">
