--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
                 </div>
 
             <!-- Section Body -->
-            <div class="row mt-5 mb-2">
+            <div class="row">
 
                 <!-- Card 1 start -->
                 <div class="col-md-6 col-lg-4 my-4">
