--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                         </h2>
                         <p>
                         </p>
-                        <button class="btn btn-outline-danger">
+                        <button class="btn btn-outline-danger" onclick="window.location.href='#portfolio'"> 
                             My Portfolio
                         </button>
                     </div>
@@ -116,7 +116,7 @@
 
                             <div class="row text-center">
                                 <div class="col-sm-4">
-                                    <button type="button" class="btn btn-danger">My works</button>
+                                    <button type="button" class="btn btn-danger" onclick="window.location.href='#portfolio'">My works</button>
                                 </div>
                                 <div class="col-sm-2">
                                     <a href="https://www.linkedin.com/in/vignesh-murugan-339260152/" target="_blank" class="text-danger fs-5"><i class="bi bi-linkedin"></i></a>
@@ -149,8 +149,8 @@
                     </div>
                     <div class="skill-item m-4">
                         <h6>Backend Development</h6>
-                        <div class="progress" role="progressbar" aria-label="Animated striped example" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">
-                            <div class="progress-bar progress-bar-striped progress-bar-animated bg-success" style="width: 75%"></div>
+                        <div class="progress" role="progressbar" aria-label="Animated striped example" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100">
+                            <div class="progress-bar progress-bar-striped progress-bar-animated bg-success" style="width: 70%"></div>
                           </div>
                     </div>
 
