update portfolio section

--- a/index.html
+++ b/index.html
@@ -258,17 +258,17 @@
                     <!-- Portfolio 1 -->
                     <div class="col-md-6 col-lg-4 my-4">
                         <div class="portfolio-items bg-light p-4 shadow-lg">
-                            <img src="./assets/blog2.jpg" width="100%" height="100%" alt="">
-                            <h5 class="fw-bolder text-uppercase text-center my-2">Car Animation</h5>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum repellendus sapiente culpa laborum autem, id dolore corporis unde pariatur, sequi est aspernatur, tempora quibusdam placeat quas? Facilis sed inventore a.</p>
-                            <a href="#" class="text-danger text-decoration-none fw-semibold">Live Preview</a>
+                            <img src="./assets/seas.png" width="100%" height="100%" alt="">
+                            <h5 class="fw-bolder text-uppercase text-center my-2">SEAS Website</h5>
+                            <p>SEAS is A leading provider of innovative IoT solutions, Automation and Solar energy management for industrial and commercial purposes. I helped them in digitalizing their company by creating a website to showcase their online presence.</p>
+                            <a href="https://seas-mu.vercel.app/" class="text-danger text-decoration-none fw-semibold" target="_blank ">Live Preview</a>
                         </div>
                     </div>
                     <!-- Portfolio 2 -->
                     <div class="col-md-6 col-lg-4 my-4">
                         <div class="portfolio-items bg-light p-4 shadow-lg">
                             <img src="./assets/blog2.jpg" width="100%" height="100%" alt="">
-                            <h5 class="fw-bolder text-uppercase text-center my-2">Car Animation</h5>
+                            <h5 class="fw-bolder text-uppercase text-center my-2"></h5>
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum repellendus sapiente culpa laborum autem, id dolore corporis unde pariatur, sequi est aspernatur, tempora quibusdam placeat quas? Facilis sed inventore a.</p>
                             <a href="#" class="text-danger text-decoration-none fw-semibold">Live Preview</a>
                         </div>
@@ -276,19 +276,28 @@
                     <!-- Portfolio 3 -->
                     <div class="col-md-6 col-lg-4 my-4">
                         <div class="portfolio-items bg-light p-4 shadow-lg">
-                            <img src="./assets/blog2.jpg" width="100%" height="100%" alt="">
-                            <h5 class="fw-bolder text-uppercase text-center my-2">Car Animation</h5>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum repellendus sapiente culpa laborum autem, id dolore corporis unde pariatur, sequi est aspernatur, tempora quibusdam placeat quas? Facilis sed inventore a.</p>
-                            <a href="#" class="text-danger text-decoration-none fw-semibold">Live Preview</a>
+                            <img src="./assets/nameit.png" width="100%" height="100%" alt="">
+                            <h5 class="fw-bolder text-uppercase text-center my-2">Name It!</h5>
+                            <p>"Name It!" is a startup name generator web application where you can generate instant names for your startup. I Created this application as a part of my self-learning process in web development. It was created using web technologies like HTML, CSS, React JS.</p>
+                            <a href="https://webdev-vignesh.github.io/nameit/" class="text-danger text-decoration-none fw-semibold" target="_blank">Live Preview</a>
                         </div>
                     </div>
                     <!-- Portfolio 4 -->
                     <div class="col-md-6 col-lg-4 my-4">
                         <div class="portfolio-items bg-light p-4 shadow-lg">
-                            <img src="./assets/blog2.jpg" width="100%" height="100%" alt="">
-                            <h5 class="fw-bolder text-uppercase text-center my-2">Car Animation</h5>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum repellendus sapiente culpa laborum autem, id dolore corporis unde pariatur, sequi est aspernatur, tempora quibusdam placeat quas? Facilis sed inventore a.</p>
-                            <a href="#" class="text-danger text-decoration-none fw-semibold">Live Preview</a>
+                            <img src="./assets/tesla.png" width="100%" height="100%" alt="">
+                            <h5 class="fw-bolder text-uppercase text-center my-2">TESLA UI</h5>
+                            <p>Tesla UI clone project, where I replicated the frontend user interface of Electric car company Tesla's website. I Created this application as a part of my self-learning process in web development. It was created using web technologies like React JS, Tailwind CSS.</p>
+                            <a href="https://tesla-clone-tailwindcss-v2.vercel.app/" class="text-danger text-decoration-none fw-semibold">Live Preview</a>
+                        </div>
+                    </div>
+                    <!-- Portfolio 5 -->
+                    <div class="col-md-6 col-lg-4 my-4">
+                        <div class="portfolio-items bg-light p-4 shadow-lg">
+                            <img src="./assets/instagram.png" width="100%" height="100%" alt="">
+                            <h5 class="fw-bolder text-uppercase text-center my-2">INSTAGRAM UI</h5>
+                            <p>Instagram UI clone project, where I replicated the frontend user interface of famous social media Instagram website. I Created this application as a part of my self-learning process in web development. It was created using web technologies like React JS, Tailwind CSS.</p>
+                            <a href="https://webdev-vignesh.github.io/Instagram-UI-Clone/src/" class="text-danger text-decoration-none fw-semibold" target="_blank">Live Preview</a>
                         </div>
                     </div>
                 </div>
