--- a/index.html
+++ b/index.html
@@ -113,16 +113,16 @@
                     <div class="row">
                         <div class="col-lg-12">
                             <div class="row text-center">
-                                <div class="col-sm-4">
+                                <div class="col-sm-4 mb-2">
                                     <button type="button" class="btn btn-danger" onclick="window.location.href='#portfolio'">My works</button>
                                 </div>
-                                <div class="col-sm-2">
+                                <div class="col-sm-2 mb-2">
                                     <a href="https://www.linkedin.com/in/vignesh-murugan-339260152/" target="_blank" class="text-danger fs-5"><i class="bi bi-linkedin"></i></a>
                                 </div>
-                                <div class="col-sm-2">
+                                <div class="col-sm-2 mb-2">
                                     <a href="https://github.com/webdev-vignesh" target="_blank" class="text-danger fs-5"><i class="bi bi-github"></i></a>
                                 </div>
-                                <div class="col-sm-2">
+                                <div class="col-sm-2 mb-2">
                                     <a href="mailto:vigmurug@gmail.com" target="_blank" class="text-danger fs-5"><i class="bi bi-envelope"></i></a>
                                 </div>
                             </div>
@@ -260,7 +260,7 @@
                         <div class="portfolio-items bg-light p-4 shadow-lg">
                             <img src="./assets/seas.png" width="100%" height="100%" alt="">
                             <h5 class="fw-bolder text-uppercase text-center my-2">SEAS Website</h5>
-                            <p>SEAS is A leading provider of innovative IoT solutions, Automation and Solar energy management for industrial and commercial purposes. I helped them in digitalizing their company by creating a website to showcase their online presence.</p>
+                            <p>SEAS is a leading provider of innovative IoT solutions, Automation and Solar energy management for industrial and commercial purposes. I helped them in digitalizing their company by creating a website to showcase their online presence.</p>
                             <a href="https://seas-mu.vercel.app/" class="text-danger text-decoration-none fw-semibold" target="_blank ">Live Preview</a>
                         </div>
                     </div>
