--- a/index.html
+++ b/index.html
@@ -103,8 +103,8 @@
                             <p>Projects</p>
                         </div>
                         <div class="col-md-4">
-                            <h4 class="fs-1 fw-bold">4</h4>
-                            <p>Months of real-world experience</p>
+                            <h4 class="fs-1 fw-bold">4+</h4>
+                            <p>Months of experience</p>
                         </div>
                     </div>
                     <!-- Fact row end -->
