--- a/index.html
+++ b/index.html
@@ -421,7 +421,7 @@
             </div>
         </div>
     </section>
-    <!-- Start of Testimonial Row -->
+    <!-- End of Testimonial Row -->
 
     <!-- Start of connect with me Row -->
     <section class="contact py-4" id="contact">
