--- a/index.html
+++ b/index.html
@@ -321,34 +321,34 @@
     <!-- End of Hire me Row -->
 
     <!-- Start of Testimonial Row -->
-    <section class="testimonial bg-light py-5">
-        <div class="container-fluid">
+    <!-- <section class="testimonial bg-light py-5">
+        <div class="container-fluid"> -->
 
             <!-- Testimonial Title -->
-            <div class="row justify-content-center">
+            <!-- <div class="row justify-content-center">
                 <div class="col-8">
                     <section class="text-center">
                         <h2 class="fw-bolder text-center">Testimonials</h2>
                     </section>
                 </div>
-            </div>
+            </div> -->
 
             <!-- Testimonial Carousel -->
-            <div class="row justify-content-center">
+            <!-- <div class="row justify-content-center">
 
-                <div class="col-lg-8 col-xl-7 my-3">
+                <div class="col-lg-8 col-xl-7 my-3"> -->
                     <!-- Carousel start -->
-                    <div id="carouselExampleIndicators" class="carousel slide">
+                    <!-- <div id="carouselExampleIndicators" class="carousel slide">
                         <div class="carousel-indicators">
                           <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active bg-danger" aria-current="true" aria-label="Slide 1"></button>
                           <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" class="bg-danger" aria-label="Slide 2"></button>
                           <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" class="bg-danger" aria-label="Slide 3"></button>
                         </div>
 
-                        <div class="carousel-inner">
+                        <div class="carousel-inner"> -->
                             
                             <!-- Start of testimonial item 1 -->
-                            <div class="testimonial-item carousel-item active p-4 bg-white shadow-2-strong rounded">
+                            <!-- <div class="testimonial-item carousel-item active p-4 bg-white shadow-2-strong rounded">
                                 <div class="testimonial-author-info d-flex align-items-center">
                                     <img src="https://via.placeholder.com/45" class="rounded-circle img-thumbnail">
                                     <div class="author ms-2">
@@ -364,11 +364,11 @@
                                     <i class="bi bi-star-fill"></i>
                                     <i class="bi bi-star-fill"></i>
                                 </div>
-                            </div>
+                            </div> -->
                             <!-- End of testimonial item 1 -->
 
                             <!-- Start of testimonial item 2 -->
-                            <div class="testimonial-item carousel-item active p-4 bg-white shadow-2-strong rounded">
+                            <!-- <div class="testimonial-item carousel-item active p-4 bg-white shadow-2-strong rounded">
                                 <div class="testimonial-author-info d-flex align-items-center">
                                     <img src="https://via.placeholder.com/45" class="rounded-circle img-thumbnail">
                                     <div class="author ms-2">
@@ -384,11 +384,11 @@
                                     <i class="bi bi-star-fill"></i>
                                     <i class="bi bi-star-fill"></i>
                                 </div>
-                            </div>
+                            </div> -->
                             <!-- End of testimonial item 2 -->
 
                             <!-- Start of testimonial item 3  -->
-                            <div class="testimonial-item carousel-item active p-4 bg-white shadow-2-strong rounded">
+                            <!-- <div class="testimonial-item carousel-item active p-4 bg-white shadow-2-strong rounded">
                                 <div class="testimonial-author-info d-flex align-items-center">
                                     <img src="https://via.placeholder.com/45" class="rounded-circle img-thumbnail">
                                     <div class="author ms-2">
@@ -404,9 +404,9 @@
                                     <i class="bi bi-star-fill"></i>
                                     <i class="bi bi-star-fill"></i>
                                 </div>
-                            </div>
+                            </div> -->
                             <!-- End of testimonial item 3 -->
-                        </div>
+                        <!-- </div>
                         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
                           <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                           <span class="visually-hidden">Previous</span>
@@ -415,12 +415,12 @@
                           <span class="carousel-control-next-icon" aria-hidden="true"></span>
                           <span class="visually-hidden">Next</span>
                         </button>
-                    </div>
+                    </div> -->
                     <!-- Carousel end -->
-                </div>
+                <!-- </div>
             </div>
         </div>
-    </section>
+    </section> -->
     <!-- End of Testimonial Row -->
 
     <!-- Start of connect with me Row -->
