--- a/index.html
+++ b/index.html
@@ -313,7 +313,7 @@
                 <div class="col-lg-8 text-center">
                     <h5 class="mb-4">Let's talk?</h5>
                     <h1 class="mb-4">I'm Available to work</h1>
-                    <button class="btn btn-outline-light">Hire me</button>
+                    <button class="btn btn-outline-light" onclick="window.location.href='#contact'">Hire me</button>
                 </div>
             </div>
         </div>
