updated portfolio content

--- a/index.html
+++ b/index.html
@@ -263,8 +263,8 @@
                             <a href="https://seastech.co.in/" target="_blank">
                                 <img src="./assets/seas.png" width="100%" height="100%" alt="seas-website">
                             </a>
-                            <h5 class="fw-bolder text-uppercase text-center my-2">SEAS Website</h5>
-                            <p>I did a 4 month Internship at SEAS Tech and worked on a few Full Stack and Frontend Projects. I also got opportunity to Work on the website development of SEAS Tech as a part of SEAS's digitalization policy to help them reach more people online and establish its online presence.
+                            <h5 class="fw-bolder text-uppercase text-center my-2">SEAS Tech Website</h5>
+                            <p>In SEAS Tech, where I completed a 4-month internship as Web Development Intern, I worked on a few Full Stack and Frontend Projects. As part of SEAS's digitization strategy to expand its online presence and reach more people, I also had the chance to work on developing SEAS Tech's website.
                             </p>
                             <p class="fw-semibold">
                                 <span class="text-decoration-underline">Technologies used:</span> React JS, Tailwind CSS, Email JS
@@ -281,7 +281,7 @@
                                 <img src="./assets/cartify.png" width="100%" height="100%" alt="cartify">
                             </a>
                             <h5 class="fw-bolder text-uppercase text-center my-2">Cartify - eCommerce Platform</h5>
-                            <p>Cartify is an eCommerce project created using full-stack technologies to learn the development of online stores. This project included features such as a carousel, items section shopping cart, and payment using stripe to improve my ability to build complex applications from start to finish.</p>
+                            <p>Cartify is an eCommerce project created using full-stack technologies to learn the development of online stores. This project helped me develop my abilities to create complicated apps from scratch by including features like a carousel, a shopping cart for the products area, and Stripe payment.</p>
                             <p class="fw-semibold">
                                 <span class="text-decoration-underline">Technologies used:</span> React JS, Material UI, Redux Toolkit, Strapi(Node JS), Stripe
                             </p>
@@ -297,7 +297,7 @@
                                 <img src="./assets/coincatalogue.png" width="100%" height="100%" alt="coin-catalogue">
                             </a>
                             <h5 class="fw-bolder text-uppercase text-center my-2">Coin Catalogue</h5>
-                            <p>Coin Catalogue is a real-time crypto price tracker application created using CoinGecko API. This project includes a main page displaying a list of cryptocurrencies with their current price, 24h change, volume, and supply and a coin section page showing details of     individual cryptos.
+                            <p>Coin Catalogue is a real-time crypto price tracker application created using CoinGecko API. This project features a main page with a list of cryptocurrencies along with information about their current prices, 24-hour changes, volume, and supply, as well as a coin section page with information about individual coins.
                             </p>
                             <p class="fw-semibold">
                                 <span class="text-decoration-underline">Technologies used:</span> React JS, CSS-Grid, Flexbox, Axios
@@ -315,7 +315,7 @@
                                 <img src="./assets/nameit.png" width="100%" height="100%" alt="">
                             </a>
                             <h5 class="fw-bolder text-uppercase text-center my-2">Talk Box</h5>
-                            <p>Cartify is a Social media project created using full-stack technologies to learn the development of social media sites. This project includes features such as a login page, register page, user feed, add/remove friends, and finding other users to improve my ability to build complex applications from start to finish.</p>
+                            <p>TalkBox is a Social media project created using full-stack technologies to learn the working of social networks. This project helped me develop my skills to create sophisticated apps from scratch by including elements like a login-register page, feeds section, users-friends page, authentication and authorization principles.</p>
                             <p class="fw-semibold">
                                 <span class="text-decoration-underline">Technologies used:</span> React JS, Material UI, Redux Toolkit, Express JS, MongoDB
                             </p>
@@ -331,7 +331,7 @@
                                 <img src="./assets/tesla.png" width="100%" height="100%" alt="tesla">
                             </a>
                             <h5 class="fw-bolder text-uppercase text-center my-2">TESLA UI</h5>
-                            <p>Tesla UI clone project, where I replicated the frontend user interface of Electric car company Tesla's website. I Created this application as a part of my self-learning process in web development and learned CSS-Flexbox property and on methods using various Tailwind CSS utility classes for responsive design of web applications.</p>
+                            <p>Tesla UI clone project, in which I replicated the frontend user interface of Tesla's website. I created this application as part of my self-learning process in web development, where I learned about the CSS-Flexbox property and methods for designing responsive web applications using various Tailwind CSS utility classes.</p>
                             <p class="fw-semibold">
                                 <span class="text-decoration-underline">Technologies used:</span> React JS, Tailwind CSS
                             </p>
@@ -348,7 +348,7 @@
                                 <img src="./assets/instagram.png" width="100%" height="100%" alt="instagram">
                             </a>
                             <h5 class="fw-bolder text-uppercase text-center my-2">INSTAGRAM UI</h5>
-                            <p>Instagram UI clone project, where I replicated the frontend user interface of famous social media Instagram website. I Created this application as a part of my self-learning process in web development and learned CSS-Flexbox property and on methods using various Tailwind CSS utility classes for responsive design of web applications</p>
+                            <p>I created an Instagram UI clone project where I exacted the frontend user interface of the well-known social networking website Instagram. I developed this application as a part of my self-paced web development coursework, where I learned about the CSS-Flexbox property and different Tailwind CSS utility classes' ways for designing flexible web applications.</p>
                             <p class="fw-semibold">
                                 <span class="text-decoration-underline">Technologies used:</span> React JS, Tailwind CSS
                             </p>
