--- a/index.html
+++ b/index.html
@@ -504,7 +504,7 @@
                 <!-- Footer Content -->
                 <!-- Branding col 1 -->
                 <div class="col-lg-4 text-center">
-                    <a href="#">
+                    <a href="#home">
                         <img src="./assets/logo.jpg" alt="logo" height="35">
                     </a>
                     <p class="fw-bolder text-danger">VIGNESH MURUGAN</p>
@@ -513,10 +513,10 @@
                 <div class="col-lg-4 text-center">
                     <h3 class="fw-bolder text-danger">Quick Links</h3>
                     <ul class="list-unstyled">
-                        <li><a href="#" class="text-decoration-none text-muted">Home</a></li>
-                        <li><a href="#" class="text-decoration-none text-muted">About</a></li>
-                        <li><a href="#" class="text-decoration-none text-muted">Hire Me</a></li>
-                        <li><a href="#" class="text-decoration-none text-muted">Contact</a></li>
+                        <li><a href="#home" class="text-decoration-none text-muted">Home</a></li>
+                        <li><a href="#about" class="text-decoration-none text-muted">About</a></li>
+                        <li><a href="#portfolio" class="text-decoration-none text-muted">Hire Me</a></li>
+                        <li><a href="#contact" class="text-decoration-none text-muted">Contact</a></li>
                     </ul>
                 </div>
 
