--- a/index.html
+++ b/index.html
@@ -260,26 +260,30 @@
                     <!-- Portfolio 1 -->
                     <div class="col-md-6 col-lg-4 my-4">
                         <div class="portfolio-items bg-light p-4 shadow-lg">
-                            <img src="./assets/seas.png" width="100%" height="100%" alt="">
+                            <a href="https://seastech.co.in/" target="_blank">
+                                <img src="./assets/seas.png" width="100%" height="100%" alt="seas-website">
+                            </a>
                             <h5 class="fw-bolder text-uppercase text-center my-2">SEAS Website</h5>
-                            <p>Worked on the website development of SEAS Tech as a part of SEAS's digitalization policy to help them reach more people online and establish its online presence.
+                            <p>I did a 4 month Internship at SEAS Tech and worked on a few Full Stack and Frontend Projects. I also got opportunity to Work on the website development of SEAS Tech as a part of SEAS's digitalization policy to help them reach more people online and establish its online presence.
                             </p>
                             <p class="fw-semibold">
-                                Technologies used: React JS, Tailwind CSS, Email JS
+                                <span class="text-decoration-underline">Technologies used:</span> React JS, Tailwind CSS, Email JS
                             </p>
                             <div class="d-flex justify-content-end">
-                                <a href="https://seastech.co.in/" class="text-danger text-decoration-none fw-semibold" target="_blank ">View Site</a>
+                                <a href="https://seastech.co.in/" class="text-danger text-decoration-none fw-semibold" target="_blank">View Site</a>
                             </div>
                         </div>
                     </div>
                     <!-- Portfolio 2 -->
                     <div class="col-md-6 col-lg-4 my-4">
                         <div class="portfolio-items bg-light p-4 shadow-lg">
-                            <img src="./assets/blog2.jpg" width="100%" height="100%" alt="">
+                            <a href="https://github.com/webdev-vignesh/cartify/" target="_blank ">
+                                <img src="./assets/cartify.png" width="100%" height="100%" alt="cartify">
+                            </a>
                             <h5 class="fw-bolder text-uppercase text-center my-2">Cartify - eCommerce Platform</h5>
-                            <p>Created an eCommerce project using full-stack technologies to replicate an online store. This project included features such as a carousel, items section shopping cart, and payment using stripe to improve my ability to build complex applications from start to finish.</p>
+                            <p>Cartify is an eCommerce project created using full-stack technologies to learn the development of online stores. This project included features such as a carousel, items section shopping cart, and payment using stripe to improve my ability to build complex applications from start to finish.</p>
                             <p class="fw-semibold">
-                                Technologies used: React JS, Material UI, Redux Toolkit, Strapi(Node JS), Stripe
+                                <span class="text-decoration-underline">Technologies used:</span> React JS, Material UI, Redux Toolkit, Strapi(Node JS), Stripe
                             </p>
                             <div class="d-flex justify-content-end">
                                 <a href="https://github.com/webdev-vignesh/cartify/" class="text-danger text-decoration-none fw-semibold" target="_blank ">View Code</a>
@@ -289,12 +293,14 @@
                     <!-- Portfolio 3 -->
                     <div class="col-md-6 col-lg-4 my-4">
                         <div class="portfolio-items bg-light p-4 shadow-lg">
-                            <img src="./assets/nameit.png" width="100%" height="100%" alt="">
+                            <a href="https://webdev-vignesh.github.io/coincatalogue/" target="_blank">
+                                <img src="./assets/coincatalogue.png" width="100%" height="100%" alt="coin-catalogue">
+                            </a>
                             <h5 class="fw-bolder text-uppercase text-center my-2">Coin Catalogue</h5>
-                            <p>Created a real-time crypto price tracker application by using CoinGecko API. This    project includes a main page displaying a list of cryptocurrencies with their current price, 24h change, volume, and supply and a coin section page showing details of     individual cryptos.
+                            <p>Coin Catalogue is a real-time crypto price tracker application created using CoinGecko API. This project includes a main page displaying a list of cryptocurrencies with their current price, 24h change, volume, and supply and a coin section page showing details of     individual cryptos.
                             </p>
                             <p class="fw-semibold">
-                                Technologies used: React JS, CSS-Grid, Flexbox, Axios
+                                <span class="text-decoration-underline">Technologies used:</span> React JS, CSS-Grid, Flexbox, Axios
                             </p>
                             <div class="d-flex justify-content-between">
                                 <a href="https://github.com/webdev-vignesh/coincatalogue" class="text-danger text-decoration-none fw-semibold" target="_blank ">View Code</a>
@@ -302,38 +308,53 @@
                             </div>
                         </div>
                     </div>
-                    <!-- Portfolio  -->
-                    <div class="col-md-6 col-lg-4 my-4">
-                        <div class="portfolio-items bg-light p-4 shadow-lg">
-                            <img src="./assets/nameit.png" width="100%" height="100%" alt="">
-                            <h5 class="fw-bolder text-uppercase text-center my-2">Talk Box</h5>
-                            <p>"Name It!" is a startup name generator web application where you can generate instant names for your startup. I Created this application as a part of my self-learning process in web development. It was created using web technologies like HTML, CSS, React JS.</p>
-                            <div class="d-flex justify-content-between">
-                                <a href="https://github.com/webdev-vignesh/talkbox" class="text-danger text-decoration-none fw-semibold" target="_blank ">View Code</a>
-                            </div>
-                        </div>
-                    </div>
                     <!-- Portfolio 4 -->
                     <div class="col-md-6 col-lg-4 my-4">
                         <div class="portfolio-items bg-light p-4 shadow-lg">
-                            <img src="./assets/tesla.png" width="100%" height="100%" alt="">
-                            <h5 class="fw-bolder text-uppercase text-center my-2">TESLA UI</h5>
-                            <p>Tesla UI clone project, where I replicated the frontend user interface of Electric car company Tesla's website. I Created this application as a part of my self-learning process in web development. It was created using web technologies like React JS, Tailwind CSS.</p>
-                            <div class="d-flex justify-content-between">
-                                <a href="https://seastech.co.in/" class="text-danger text-decoration-none fw-semibold" target="_blank ">View Code</a>
-                                <a href="https://seas-mu.vercel.app/" class="text-danger text-decoration-none fw-semibold" target="_blank ">View Preview</a>
+                            <a href="https://github.com/webdev-vignesh/talkbox" target="_blank">
+                                <img src="./assets/nameit.png" width="100%" height="100%" alt="">
+                            </a>
+                            <h5 class="fw-bolder text-uppercase text-center my-2">Talk Box</h5>
+                            <p>Cartify is a Social media project created using full-stack technologies to learn the development of social media sites. This project includes features such as a login page, register page, user feed, add/remove friends, and finding other users to improve my ability to build complex applications from start to finish.</p>
+                            <p class="fw-semibold">
+                                <span class="text-decoration-underline">Technologies used:</span> React JS, Material UI, Redux Toolkit, Express JS, MongoDB
+                            </p>
+                            <div class="d-flex justify-content-end">
+                                <a href="https://github.com/webdev-vignesh/talkbox" class="text-danger text-decoration-none fw-semibold" target="_blank ">View Code</a>
                             </div>
                         </div>
                     </div>
                     <!-- Portfolio 5 -->
                     <div class="col-md-6 col-lg-4 my-4">
                         <div class="portfolio-items bg-light p-4 shadow-lg">
-                            <img src="./assets/instagram.png" width="100%" height="100%" alt="">
-                            <h5 class="fw-bolder text-uppercase text-center my-2">INSTAGRAM UI</h5>
-                            <p>Instagram UI clone project, where I replicated the frontend user interface of famous social media Instagram website. I Created this application as a part of my self-learning process in web development. It was created using web technologies like React JS, Tailwind CSS.</p>
+                            <a href="https://webdev-vignesh.github.io/Tesla-UI-Clone/src/" target="_blank">
+                                <img src="./assets/tesla.png" width="100%" height="100%" alt="tesla">
+                            </a>
+                            <h5 class="fw-bolder text-uppercase text-center my-2">TESLA UI</h5>
+                            <p>Tesla UI clone project, where I replicated the frontend user interface of Electric car company Tesla's website. I Created this application as a part of my self-learning process in web development and learned CSS-Flexbox property and on methods using various Tailwind CSS utility classes for responsive design of web applications.</p>
+                            <p class="fw-semibold">
+                                <span class="text-decoration-underline">Technologies used:</span> React JS, Tailwind CSS
+                            </p>
                             <div class="d-flex justify-content-between">
-                                <a href="https://seastech.co.in/" class="text-danger text-decoration-none fw-semibold" target="_blank ">View Code</a>
-                                <a href="https://seas-mu.vercel.app/" class="text-danger text-decoration-none fw-semibold" target="_blank ">View Preview</a>
+                                <a href="https://github.com/webdev-vignesh/Tesla-UI-Clone" class="text-danger text-decoration-none fw-semibold" target="_blank ">View Code</a>
+                                <a href="https://webdev-vignesh.github.io/Tesla-UI-Clone/src/" class="text-danger text-decoration-none fw-semibold" target="_blank ">View Preview</a>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- Portfolio 6 -->
+                    <div class="col-md-6 col-lg-4 my-4">
+                        <div class="portfolio-items bg-light p-4 shadow-lg">
+                            <a href="https://webdev-vignesh.github.io/Instagram-UI-Clone/src/" target="_blank">
+                                <img src="./assets/instagram.png" width="100%" height="100%" alt="instagram">
+                            </a>
+                            <h5 class="fw-bolder text-uppercase text-center my-2">INSTAGRAM UI</h5>
+                            <p>Instagram UI clone project, where I replicated the frontend user interface of famous social media Instagram website. I Created this application as a part of my self-learning process in web development and learned CSS-Flexbox property and on methods using various Tailwind CSS utility classes for responsive design of web applications</p>
+                            <p class="fw-semibold">
+                                <span class="text-decoration-underline">Technologies used:</span> React JS, Tailwind CSS
+                            </p>
+                            <div class="d-flex justify-content-between">
+                                <a href="https://github.com/webdev-vignesh/Instagram-UI-Clone" class="text-danger text-decoration-none fw-semibold" target="_blank ">View Code</a>
+                                <a href="https://webdev-vignesh.github.io/Instagram-UI-Clone/src/" class="text-danger text-decoration-none fw-semibold" target="_blank ">View Preview</a>
                             </div>
                         </div>
                     </div>
