--- a/index.html
+++ b/index.html
@@ -573,7 +573,7 @@
                     <ul class="list-unstyled">
                         <li><a href="#home" class="text-decoration-none text-muted">Home</a></li>
                         <li><a href="#about" class="text-decoration-none text-muted">About</a></li>
-                        <li><a href="#portfolio" class="text-decoration-none text-muted">Hire Me</a></li>
+                        <li><a href="#contact" class="text-decoration-none text-muted">Hire Me</a></li>
                         <li><a href="#contact" class="text-decoration-none text-muted">Contact</a></li>
                     </ul>
                 </div>
